separando clinicas unimed que estavam erradas

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
   </noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JOWPC6">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JOWPC6" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=7ur4sD">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=7ur4sD" type="text/css">
 
 
 
@@ -86,7 +86,7 @@
               target="_blank">
               <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
             </a>
-            <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/">
+            <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/" target="_blank">
               <span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
             </a>
 
@@ -270,7 +270,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="item features-image col-12 col-md-6 col-lg-4 active">
+        <div class="item features-image col-12 col-md-6 col-lg-3 active">
           <div class="item-wrapper">
             <div class="item-img mb-3">
               <img src="assets/images/img-20240804-wa0095.jpg" alt="" title="" data-slide-to="0" data-bs-slide-to="0">
@@ -286,10 +286,27 @@
             </div>
           </div>
         </div>
-        <div class="item features-image col-12 col-md-6 col-lg-4">
+        <div class="item features-image col-12 col-md-6 col-lg-3 active">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0114.jpeg" alt="" title="" data-slide-to="1" data-bs-slide-to="1">
+              <img src="assets/images/imagem-do-whatsapp-de-2024-08-05-s-22.24.35-45ff542b.jpg" alt="" title=""
+                data-slide-to="1" data-bs-slide-to="1">
+            </div>
+            <div class="item-content align-left">
+              <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
+                Cuiabá - MT</h5>
+              <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5"><strong>Clínica Multidisciplinar De Terapias
+                  Especiais</strong></h6>
+
+              <div class="mbr-section-btn item-footer"><a href="clinica-multidisciplinar-terapias-especiais.html"
+                  class="btn item-btn btn-primary display-7">Saiba Mais</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="item features-image col-12 col-md-6 col-lg-3">
+          <div class="item-wrapper">
+            <div class="item-img mb-3">
+              <img src="assets/images/img-20240804-wa0114.jpeg" alt="" title="" data-slide-to="2" data-bs-slide-to="2">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
@@ -302,10 +319,10 @@
             </div>
           </div>
         </div>
-        <div class="item features-image col-12 col-md-6 col-lg-4">
+        <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0065.jpg" alt="" title="" data-slide-to="2" data-bs-slide-to="2">
+              <img src="assets/images/img-20240804-wa0065.jpg" alt="" title="" data-slide-to="3" data-bs-slide-to="3">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">Rio Grande - RS</h5>
@@ -317,10 +334,10 @@
             </div>
           </div>
         </div>
-        <div class="item features-image col-12 col-md-6 col-lg-4">
+        <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0150.jpg" alt="" title="" data-slide-to="3" data-bs-slide-to="3">
+              <img src="assets/images/img-20240804-wa0150.jpg" alt="" title="" data-slide-to="4" data-bs-slide-to="4">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-0 mb-3 display-7">
@@ -333,10 +350,10 @@
           </div>
         </div>
 
-        <div class="item features-image col-12 col-md-6 col-lg-4">
+        <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0045.jpg" alt="" title="" data-slide-to="4" data-bs-slide-to="4">
+              <img src="assets/images/img-20240804-wa0045.jpg" alt="" title="" data-slide-to="5" data-bs-slide-to="5">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">Goiania - GO</h5>
@@ -347,10 +364,10 @@
             </div>
           </div>
         </div>
-        <div class="item features-image col-12 col-md-6 col-lg-4">
+        <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0037.jpg" alt="" title="" data-slide-to="5" data-bs-slide-to="5">
+              <img src="assets/images/img-20240804-wa0037.jpg" alt="" title="" data-slide-to="6" data-bs-slide-to="6">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">Brasília - DF</h5>
