--- a/shopping-express-go.html
+++ b/shopping-express-go.html
@@ -35,8 +35,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=xJU5HF">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=xJU5HF" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=4fcdHR">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=4fcdHR" type="text/css">
 
 
 
@@ -87,7 +87,8 @@
                             target="_blank">
                             <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
                         </a>
-                        <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/">
+                        <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/"
+                            target="_blank">
                             <span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
                         </a>
 
@@ -185,9 +186,9 @@
             <div class="row mbr-gallery">
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0047.jpg" alt="" data-slide-to="0"
-                            data-bs-slide-to="0" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="0" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -196,9 +197,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0046.jpg" alt="" data-slide-to="1"
-                            data-bs-slide-to="1" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="1" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -207,9 +208,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0044.jpg" alt="" data-slide-to="2"
-                            data-bs-slide-to="2" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="2" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -218,9 +219,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0043.jpeg" alt="" data-slide-to="3"
-                            data-bs-slide-to="3" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="3" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -229,9 +230,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0042.jpeg" alt="" data-slide-to="4"
-                            data-bs-slide-to="4" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="4" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -240,9 +241,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0041.jpg" alt="" data-slide-to="5"
-                            data-bs-slide-to="5" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="5" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -251,9 +252,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0040.jpg" alt="" data-slide-to="6"
-                            data-bs-slide-to="6" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="6" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -262,9 +263,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
+                        data-target="#ulmrmU6CAo-modal" data-bs-target="#ulmrmU6CAo-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0038.jpg" alt="" data-slide-to="7"
-                            data-bs-slide-to="7" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
+                            data-bs-slide-to="7" data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -279,11 +280,11 @@
 
             </div>
 
-            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ulmdXxbU1A-modal">
+            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ulmrmU6CAo-modal">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-ulmdXxbU1A"
+                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-ulmrmU6CAo"
                                 data-interval="5000" data-bs-interval="5000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -319,21 +320,21 @@
                                 </div>
                                 <ol class="carousel-indicators">
                                     <li data-slide-to="0" data-bs-slide-to="0" class="active"
-                                        data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A"></li>
-                                    <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ulmdXxbU1A"
-                                        data-bs-target="#lb-ulmdXxbU1A"></li>
-                                    <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ulmdXxbU1A"
-                                        data-bs-target="#lb-ulmdXxbU1A"></li>
-                                    <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ulmdXxbU1A"
-                                        data-bs-target="#lb-ulmdXxbU1A"></li>
-                                    <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ulmdXxbU1A"
-                                        data-bs-target="#lb-ulmdXxbU1A"></li>
-                                    <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ulmdXxbU1A"
-                                        data-bs-target="#lb-ulmdXxbU1A"></li>
-                                    <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ulmdXxbU1A"
-                                        data-bs-target="#lb-ulmdXxbU1A"></li>
-                                    <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ulmdXxbU1A"
-                                        data-bs-target="#lb-ulmdXxbU1A"></li>
+                                        data-target="#lb-ulmrmU6CAo" data-bs-target="#lb-ulmrmU6CAo"></li>
+                                    <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ulmrmU6CAo"
+                                        data-bs-target="#lb-ulmrmU6CAo"></li>
+                                    <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ulmrmU6CAo"
+                                        data-bs-target="#lb-ulmrmU6CAo"></li>
+                                    <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ulmrmU6CAo"
+                                        data-bs-target="#lb-ulmrmU6CAo"></li>
+                                    <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ulmrmU6CAo"
+                                        data-bs-target="#lb-ulmrmU6CAo"></li>
+                                    <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ulmrmU6CAo"
+                                        data-bs-target="#lb-ulmrmU6CAo"></li>
+                                    <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ulmrmU6CAo"
+                                        data-bs-target="#lb-ulmrmU6CAo"></li>
+                                    <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ulmrmU6CAo"
+                                        data-bs-target="#lb-ulmrmU6CAo"></li>
 
 
 
@@ -345,12 +346,12 @@
                                     aria-label="Close">
                                 </a>
                                 <a class="carousel-control-prev carousel-control" role="button" data-slide="prev"
-                                    data-bs-slide="prev" href="#lb-ulmdXxbU1A">
+                                    data-bs-slide="prev" href="#lb-ulmrmU6CAo">
                                     <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Previous</span>
                                 </a>
                                 <a class="carousel-control-next carousel-control" role="button" data-slide="next"
-                                    data-bs-slide="next" href="#lb-ulmdXxbU1A">
+                                    data-bs-slide="next" href="#lb-ulmrmU6CAo">
                                     <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Next</span>
                                 </a>
