--- a/contato.html
+++ b/contato.html
@@ -34,8 +34,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=oPyUue">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=oPyUue" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=hwfsRa">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=hwfsRa" type="text/css">
 
 
 
@@ -86,7 +86,8 @@
                             target="_blank">
                             <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
                         </a>
-                        <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/">
+                        <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/"
+                            target="_blank">
                             <span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
                         </a>
 
