--- a/sobre.html
+++ b/sobre.html
@@ -35,8 +35,8 @@
 		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
 	</noscript>
-	<link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JzgHBJ">
-	<link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JzgHBJ" type="text/css">
+	<link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ztCCh9">
+	<link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ztCCh9" type="text/css">
 
 
 
@@ -87,7 +87,8 @@
 							target="_blank">
 							<span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
 						</a>
-						<a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/">
+						<a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/"
+							target="_blank">
 							<span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
 						</a>
 
@@ -111,18 +112,19 @@
 						<div class="card-box align-center">
 							<h1 class="card-title mbr-fonts-style mb-4 display-2"><strong>Sobre a Tríade
 									Construtora</strong></h1>
-							<p class="mbr-text mbr-fonts-style mb-4 display-7">Há cinco anos no mercado, a Tríade
-								Construtora se destaca como uma referência no setor de construção civil, especialmente
-								em obras corporativas e hospitalares. Com um histórico impressionante de mais de 15
-								projetos concluídos e mais de 77.000 metros quadrados construídos, nossa empresa tem
-								consolidado uma reputação sólida, fundamentada na honestidade, qualidade e
-								integridade.<br></p>
+							<p class="mbr-text mbr-fonts-style mb-4 display-7">Há <strong>cinco anos</strong> no
+								mercado, a Tríade Construtora se destaca como uma referência no setor de construção
+								civil, especialmente em obras <strong>corporativas </strong>e
+								<strong>hospitalares</strong>. Com um histórico impressionante de mais de <strong>15
+								</strong>projetos concluídos e mais de <strong>77.000</strong> metros quadrados
+								construídos, nossa empresa tem consolidado uma reputação sólida, fundamentada na
+								honestidade, qualidade e integridade.<br></p>
 							<div class="mbr-section-btn mt-4"><a class="btn btn-primary display-7"
-									href="https://mobiri.se">O que fazemos</a> <a
-									class="btn btn-primary-outline display-7" href="https://mobiri.se">Valores</a> <a
-									class="btn btn-primary display-7" href="https://mobiri.se">Compromisso</a> <a
-									class="btn btn-primary-outline display-7" href="https://mobiri.se">Escolha-nos</a>
-							</div>
+									href="sobre.html#article04-j">O que fazemos</a> <a
+									class="btn btn-primary-outline display-7" href="sobre.html#article02-k">Valores</a>
+								<a class="btn btn-primary display-7" href="sobre.html#article04-m">Compromisso</a> <a
+									class="btn btn-primary-outline display-7"
+									href="sobre.html#article02-n">Escolha-nos</a></div>
 						</div>
 					</div>
 				</div>
